# ai-toolbox

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: commit.md  index.md
src/ai_toolbox/: __init__.py  main.py
src/commands/: commit.py
tests/: __init__.py  test_commit.py  test_example.py  test_main.py
