[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolbox"
version = "0.1.0"
description = "A toolbox for AI utilities and helpers"
readme = "README.md"
requires-python = ">=3.13.3"
license = {text = "MIT"}
authors = [
    {name = "Mariel Reyes", email = "99100374+mariel-rs@users.noreply.github.com"}
]
keywords = ["ai", "toolbox", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Add your package dependencies here
    # "openai>=1.0.0",
    "click==8.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-toolbox = "ai_toolbox.main:cli"

[project.urls]
Homepage = "https://github.com/mariel-rs/ai-toolbox"
Repository = "https://github.com/mariel-rs/ai-toolbox"
Issues = "https://github.com/mariel-rs/ai-toolbox/issues"
